After Integration Tests added and State Machine

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 logging.level.guru.springframework=debug
 server.port=8081
 guru.sfg.beer-host=http://localhost:8080
+
+
+#JMS User
+spring.artemis.user=brian
+spring.artemis.password=eagles123
