--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,20 @@
 	<parent>
 		<groupId>guru.springframework</groupId>
 		<artifactId>mssc-brewery-bom</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>guru.springframework</groupId>
 	<artifactId>mssc-beer-order-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>mssc-beer-order-service</name>
 	<description>Beer Order Microservice</description>
+
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -29,5 +36,17 @@
 			<artifactId>jaxb-impl</artifactId>
 			<version>${jaxb.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>artemis-jms-server</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.JensPiegsa</groupId>
+			<artifactId>wiremock-extension</artifactId>
+			<version>0.4.0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 </project>
